--- a/BabyD-main/index.html
+++ b/BabyD-main/index.html
@@ -215,7 +215,7 @@
                 <div class="icons">
                     <img src="images/icon-github.png">
                     <h3>GitHub</h3>
-                    <a href="https://github.com/marisouza31/BabyD" target="_blank"><span style="font-weight:bold; color:  #eb2a9f;">Repositório do
+                    <a href="https://github.com/marisouza31/BabydSite" target="_blank"><span style="font-weight:bold; color:  #eb2a9f;">Repositório do
                             BabyD</span>
                     </a>
                 </div>
