--- a/BabyD-main/index.html
+++ b/BabyD-main/index.html
@@ -236,7 +236,7 @@
         <div class="box-container">
 
             <div class="box">
-                <h3> <i></i> <img src="images/logo.png" alt=""></h3>
+                <img src="images/logo.png" alt="">
                 <p>Aplicação que utiliza de tecnologia de reconhecimento facial para segurança em creches.</p>
             </div>
 
