--- a/BabyD-main/index.html
+++ b/BabyD-main/index.html
@@ -258,8 +258,8 @@
                 <a
                     href="https://github.com/marisouza31/BabyD/blob/e3d3f82b09e374a2ac0afcaa768d7170123c4bf9/Documentos/Termo%20de%20Uso%20-%20BabyD.pdf">
                     <i class="fas fa-caret-right"></i> termos de uso</a>
-                <a href="https://www.instagram.com/tcc_babyd?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> <i class="fas fa-caret-right"></i> instagram BabyD</a>
-                <a href="https://www.instagram.com/tcc_babyd?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> <i class="fas fa-caret-right"></i> FAQs</a>
+                <a href="https://www.instagram.com/projetobabyd/"> <i class="fas fa-caret-right"></i> instagram BabyD</a>
+                <a href="https://www.instagram.com/projetobabyd/"> <i class="fas fa-caret-right"></i> FAQs</a>
                 <a href="https://www.eteczonaleste.com.br/"> <i class="fas fa-caret-right"></i> informações da instituição</a>
             </div>
         </div>
